<resources>
    <string name="arguments">评论</string>
    <string name="check_out">登出</string>
    <string name="have_one_">已经有一个账号？</string>
    <string name="next">注册</string>
    <string name="check_password">请输入密码</string>
    <string name="check_name">昵称</string>
    <string name="check_in">注册</string>
    <string name="check_in_new">注册新账号</string>
    <string name="version_current">当前版本</string>
    <string name="version_query">版本查询</string>
    <string name="Image_to_big">图片放大</string>
    <string name="HelloWorld">你好!</string>
    <string name="app_name">知乎晚报</string>
    <string name="night_mode">夜间模式</string>
    <string name="setting">设置选项</string>
    <string name="bells">消息</string>
    <string name="share">分享</string>
    <string name="collecting">收藏</string>
    <string name="comment">点评</string>
    <string name="appreciate">点赞</string>
    <string name="zero">首页</string>
    <string name="first">日常心理学</string>
    <string name="two">用户推荐日报</string>
    <string name="three">电影日报</string>
    <string name="four">不许无聊</string>
    <string name="five">设计日报</string>
    <string name="six">大公司日报</string>
    <string name="seven">财经日报</string>
    <string name="eghit">互联网安全</string>
    <string name="nine">开始游戏</string>
    <string name="ten">音乐日报</string>
    <string name="eleven">动漫日报</string>
    <string name="twelve">体育日报</string>
    <string name="MyCollects">我的收藏</string>
    <string name="download">离线下载</string>
    <string name="back">返回</string>
    <string name="content">首页新闻图片缩略图</string>
    <string name="editor">主编</string>
</resources>
