<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/zero"
            android:title="@string/zero" />
        <item
            android:id="@+id/first"
            android:title="@string/first"/>
        <item
            android:id="@+id/two"
            android:title="@string/two"/>
        <item
            android:id="@+id/three"
            android:title="@string/three"/>
        <item
            android:id="@+id/four"
            android:title="@string/four"/>
        <item
            android:id="@+id/five"
            android:title="@string/five"/>
        <item
            android:id="@+id/six"
            android:title="@string/six"/>
        <item
            android:id="@+id/seven"
            android:title="@string/seven"/>
        <item
            android:id="@+id/eghit"
            android:title="@string/eghit"/>
        <item
            android:id="@+id/nine"
            android:title="@string/nine"/>
        <item
            android:id="@+id/ten"
            android:title="@string/ten"/>
        <item
            android:id="@+id/eleven"
            android:title="@string/eleven"/>
        <item
            android:id="@+id/twelve"
            android:title="@string/twelve"/>
    </group>

</menu>