<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_data"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />
    <ImageView
        android:id="@+id/face_login"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        android:layout_gravity="center_horizontal"
        android:background="@mipmap/icon"
        android:contentDescription="@string/content"
        />
    <EditText
        android:id="@+id/check_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_login_account"
        android:drawableLeft="@drawable/ic_login_account"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:drawablePadding="15dp"
        android:singleLine="true"
        android:maxWidth="200dp"
        android:maxLength="10"
        android:hint="@string/check_name"/>
    <EditText
        android:id="@+id/check_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_register_pwd"
        android:drawableStart="@drawable/ic_register_pwd"
        android:hint="@string/check_password"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:singleLine="true"
        android:drawablePadding="10dp"
        android:maxWidth="200dp"
        android:maxLength="12"
        android:inputType="textPassword"/>
    <TextView
        android:id="@+id/check_in"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:text="@string/next"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="3dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorWhite"
        android:background="@color/colorefresh"
        />
    <TextView
        android:id="@+id/have_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_one_"
        android:background="#00000000"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="15sp"/>
</LinearLayout>