<LinearLayout android:orientation="vertical"
    android:background="?attr/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <android.support.v7.widget.CardView
            android:id="@+id/card_face_side"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="21dp">
                <ImageView
                    android:id="@+id/face_side"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/content"
                    android:src="@drawable/face_test"
                    />
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/collec_side"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/MyCollects"
                    android:layout_marginStart="35dp"
                    android:layout_marginLeft="35dp"
                    android:textColor="@color/colorWhite"
                    />
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/down_side"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/download"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:textColor="@color/colorWhite"
                    />
        </LinearLayout>
</LinearLayout>
